# mintyml

./: .gitignore  .hintrc  Cargo.toml  README.md  README.mty  build-utils.psm1  doc-utils.psm1  justfile  release-targets-apple.txt  release-targets.txt
.github/actions/setup/: action.yml
.github/workflows/: deploy-demo.yml  deploy-pages.yml  on-push-actions.yml  release-cli.yml  rust-test.yml
doc-templates/: cli-readme.md  readme.mty
docs/general/: metadata.md
minty-cli/: Cargo.toml  README.md
minty-cli/src/: args.rs  convert.rs  error_reporter.rs  io_helper.rs  key_value.rs  main.rs  tests.rs  utils.rs
minty-wasm/: .gitignore  .npmignore  Cargo.toml  README.md  foo  justfile  package.json  package.template.json  tsconfig.build.json  tsconfig.json  tsconfig.test.json
minty-wasm/out.js/: index.d.ts  index.js  index.test.js
minty-wasm/src/: lib.rs
minty-wasm/src-ts/: index.test.ts  index.ts
mintyml/: Cargo.toml
mintyml/src/: ast.rs  config.rs  error.rs  escape.rs  foo  lib.rs  utils.rs
mintyml/src/ast/: elements.rs  errors.rs  selectors.rs  text.rs  tokens.rs
mintyml/src/document/: _mod.rs  elements.rs  line.rs  mod.rs  selectors.rs  text.rs
mintyml/src/document/elements/: into_tags.rs
mintyml/src/inference/: mod.rs
mintyml/src/inference/definitions/: mod.rs  specialty.rs  table.rs
mintyml/src/inference/engine/: mod.rs  rules.rs  when.rs
mintyml/src/inference/engine/when/: ops.rs
mintyml/src/ir/: mod.rs
mintyml/src/output/: mod.rs  utils.rs
mintyml/src/transform/: apply_special_tags.rs  complete_page.rs  infer_elements.rs  metadata.rs  mod.rs
mintyml/tests/: comment.rs  convert.rs  error.rs  escape.rs  infer.rs  multiline.rs  raw.rs  text.rs  utils.rs
src/: ast.rs  escape.rs  lib.rs
src/ir/: mod.rs
src/output/: mod.rs
web-demo/: .gitignore  index.html  index.scss  justfile  package-lock.json  package.json  tsconfig.json  webpack.config.js
web-demo/public/: index.css  intro.mty  theme.css
web-demo/public/examples/: blockquote.mty  formatting.mty  intro.mty  list.mty  sample-page.mty  sections.mty  table.mty
web-demo/src/: collapsible.html  collapsible.ts  index.ts  message.ts  worker.ts
