[package]
name = "mintyml-cli"
description = "Creates HTML from MinTyML, a minialist alternative syntax to HTML"
version.workspace = true
edition = "2021"
repository.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.0", features = ["derive", "string", "wrap_help"] }
rayon = "1.8.1"

[dependencies.mintyml]
path = "../mintyml"
version = "0.1"

[profile.release]
strip = true
