[package]
name = "mintyml-cli"
description = "Creates HTML from MinTyML, a minialist alternative syntax to HTML"
version.workspace = true
edition = "2021"
repository.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.0", features = ["derive", "string", "wrap_help"] }
either = "1.12.0"
rayon = "1.8.1"

[dependencies.mintyml]
path = "../mintyml"
version = "0.1"
features = ["error-trait"]

[dependencies.serde]
version = "1.0.202"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.117"

[dependencies.derive_more]
version = "0.99.17"
default-features = false
features = ["display"]

[profile.release]
strip = true
