[package]
name = "mintyml-cli"
description = "Creates HTML from MinTyML, a minialist alternative syntax to HTML"
version.workspace = true
edition = "2021"
repository.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive", "string", "wrap_help"] }
either = "1.15.0"
rayon = "1.10.0"

[dependencies.mintyml]
path = "../mintyml"
version = "0.1"
features = ["error-trait"]

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.140"

[dependencies.derive_more]
version = "0.99.20"
default-features = false
features = ["display"]

[dev-dependencies]
shlex = "1.3.0"

[profile.release]
strip = true
