[package]
name = "minty-wasm"
version = "0.1.0"
edition = "2021"
repository.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.68"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.wasm-bindgen]
version = "0.2.91"
default-features = false
features = ["spans", "std"]

[dependencies.mintyml]
path = "../mintyml"
version = "0.1.2"
default-features = false
