[package]
name = "mintyml"
description = "A minialist alternative syntax to HTML"
version.workspace = true
edition = "2021"
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies.thiserror]
version = "1.0.57"
default-features = false
optional = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.either]
version = "1.9"
default-features = false

[dependencies.gramma]
version = "0.2"
default-features = false

[features]
default = []
std = ["gramma/std"]
error-trait = ["std", "dep:thiserror"]
