[package]
name = "mintyml"
description = "A minialist alternative syntax to HTML"
version.workspace = true
edition = "2021"
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies.derive_more]
version = "0.99.20"
default-features = false
features = ["display", "add"]

[dependencies.either]
version = "1.15"
default-features = false

[dependencies.gramma]
version = "0.2"
default-features = false

[features]
default = []
std = ["gramma/std"]
error-trait = ["std", "derive_more/error"]
